Modified draw toolbar

--- a/map-leaflet.html
+++ b/map-leaflet.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Map Demo According to service Provider</title>
+    <title>Map Demo According to Service Provider</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ=="
